control-plane/roles/gardener/templates/network-policies/to-virtual-garden-kube-apiserver.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: to-virtual-garden-kube-apiserver
  namespace: garden
spec:
  egress:
  - ports:
    - port: 443
      protocol: TCP
    to:
    - podSelector:
        matchLabels:
          app: garden
          component: kube-apiserver
  podSelector:
    matchLabels:
      networking.resources.gardener.cloud/to-virtual-garden-kube-apiserver-tcp-443: allowed
  policyTypes:
  - Egress
